--- a/src/main/resources/templates/atendimento-form.html
+++ b/src/main/resources/templates/atendimento-form.html
@@ -23,12 +23,12 @@
         </select>
     </div>
     <div>
-        <label for="profissionalId">Profissional ID:</label>
-        <input type="number" id="profissionalId" name="profissionalId" th:field="*{profissionalId}" required />
+        <label for="profissionalNome">Nome do Profissional:</label>
+        <input type="text" id="profissionalNome" name="profissionalNome" th:field="*{profissionalNome}" required />
     </div>
     <div>
         <label for="pacienteId">Paciente ID:</label>
-        <input type="number" id="pacienteId" name="pacienteId" th:field="*{pacienteId}" required />
+        <input type="number" id="paciente.id" name="paciente.id" th:field="*{paciente.id}" required />
     </div>
     <button type="submit">Salvar</button>
 </form>
