--- a/src/main/resources/templates/ocorrencia-lista.html
+++ b/src/main/resources/templates/ocorrencia-lista.html
@@ -22,7 +22,7 @@
         <td th:text="${ocorrencia.endereco}"></td>
         <td th:text="${ocorrencia.dataHora}"></td>
         <td th:text="${ocorrencia.status}"></td>
-        <td th:text="${ocorrencia.pacienteNome}"></td>
+        <td th:text="${ocorrencia.paciente.nome}">Nome do Paciente</td>
         <td>
             <a th:href="@{/ocorrencias/excluir/{id}(id=${ocorrencia.id})}">Excluir</a>
         </td>
