--- a/src/main/resources/templates/atendimento-lista.html
+++ b/src/main/resources/templates/atendimento-lista.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <h1>Lista de Atendimentos</h1>
+
+<!-- Campo de busca -->
+<form action="#" th:action="@{/atendimentos/buscar}" method="get">
+    <input type="text" name="descricao" placeholder="Buscar por nome do Profissional" />
+    <button type="submit">Buscar</button>
+</form>
+
 <table>
     <tr>
         <th>ID</th>
