--- a/src/main/resources/templates/paciente-lista.html
+++ b/src/main/resources/templates/paciente-lista.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <h1>Lista de Pacientes</h1>
+
+<!-- Campo de busca -->
+<form action="#" th:action="@{/pacientes/buscar}" method="get">
+    <input type="text" name="nome" placeholder="Buscar por nome" />
+    <button type="submit">Buscar</button>
+</form>
+
 <table>
     <tr>
         <th>ID</th>
